Cập nhập giao diện và chức năng bán hàng

--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChiTietPhieuXuatBUS.cs" />
     <Compile Include="KhachHangBUS.cs" />
     <Compile Include="NhanVienBUS.cs" />
     <Compile Include="PhieuXuatBUS.cs" />
