--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -50,13 +50,13 @@
     <Compile Include="SerialDAO.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary\ClassLibrary.csproj">
+      <Project>{d14aa4b8-5795-45da-a897-83e829401a5a}</Project>
+      <Name>ClassLibrary</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DTO\DTO.csproj">
       <Project>{d8d4e321-49e2-4ba1-862b-075dc7be8d0f}</Project>
       <Name>DTO</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Util\OTHER.csproj">
-      <Project>{69BCAAA3-B7C4-4B90-98CD-C19D6E253D34}</Project>
-      <Name>OTHER</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
