--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -54,7 +54,6 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="MessageBoxManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserControls\ucBanHang.cs">
@@ -178,32 +177,31 @@
       <Project>{c99b9c7e-4ce6-4204-9c5a-8c7b6129bd72}</Project>
       <Name>BUS</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ClassLibrary\ClassLibrary.csproj">
+      <Project>{d14aa4b8-5795-45da-a897-83e829401a5a}</Project>
+      <Name>ClassLibrary</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DTO\DTO.csproj">
       <Project>{d8d4e321-49e2-4ba1-862b-075dc7be8d0f}</Project>
       <Name>DTO</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\default.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\DangXuat.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\tabpage-cloe-button.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\tabpage-cloe-button-active.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\cart.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\KhachHang.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="icon.ico" />
+    <None Include="Resources\TonKho.png" />
+    <None Include="Resources\HangHoa.png" />
+    <None Include="Resources\CongNo.png" />
+    <None Include="Resources\BaoCao.png" />
+    <None Include="Resources\NhapHang.png" />
+    <None Include="Resources\NhaCungCap.png" />
+    <None Include="Resources\KhachHang.png" />
+    <None Include="Resources\DangXuat.png" />
+    <None Include="Resources\CloseActive.png" />
+    <None Include="Resources\Close.png" />
+    <None Include="Resources\BanHang.png" />
+    <None Include="Resources\AnhMacDinh.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
