--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -40,10 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChiTietPhieuXuatDTO.cs" />
-    <Compile Include="KhachHangDTO.cs" />
-    <Compile Include="NhaCungCapDTO.cs" />
-    <Compile Include="PhieuXuatDTO.cs" />
+    <Compile Include="clsChiTietPhieuNhap_DTO.cs" />
+    <Compile Include="clsChiTietPhieuXuat_DTO.cs" />
+    <Compile Include="clsKhachHang_DTO.cs" />
+    <Compile Include="clsNhaCungCap_DTO.cs" />
+    <Compile Include="clsPhieuNhap_DTO.cs" />
+    <Compile Include="clsPhieuXuat_DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
