Chức năng thêm, xoá, sửa sản phẩm

--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -42,7 +42,9 @@
   <ItemGroup>
     <Compile Include="clsChiTietPhieuNhap_BUS.cs" />
     <Compile Include="clsChiTietPhieuXuat_BUS.cs" />
+    <Compile Include="clsHangSanXuat_BUS.cs" />
     <Compile Include="clsKhachHang_BUS.cs" />
+    <Compile Include="clsLoaiSanPham_BUS.cs" />
     <Compile Include="clsNhaCungCap_BUS.cs" />
     <Compile Include="clsNhanVien_BUS.cs" />
     <Compile Include="clsPhieuNhap_BUS.cs" />
