--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -314,6 +314,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
+    <None Include="Resources\ThemHinhAnh.jpg" />
     <None Include="Resources\LoiNhuan.png" />
     <None Include="Resources\DoanhSo.png" />
     <None Include="Resources\DoanhThu.png" />
