fix loi sua san pham, them quan ly loai

--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -44,6 +44,7 @@
     <Compile Include="clsChiTietPhieuXuat_DAO.cs" />
     <Compile Include="clsHangSanXuat_DAO.cs" />
     <Compile Include="clsLoaiSanPham_DAO.cs" />
+    <Compile Include="clsLoai_DAO.cs" />
     <Compile Include="clsNhaCungCap_DAO.cs" />
     <Compile Include="clsPhieuNhap_DAO.cs" />
     <Compile Include="clsPhieuXuat_DAO.cs" />
