--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -45,6 +45,7 @@
     <Compile Include="clsHangSanXuat_BUS.cs" />
     <Compile Include="clsKhachHang_BUS.cs" />
     <Compile Include="clsLoaiSanPham_BUS.cs" />
+    <Compile Include="clsLoai_BUS.cs" />
     <Compile Include="clsNhaCungCap_BUS.cs" />
     <Compile Include="clsNhanVien_BUS.cs" />
     <Compile Include="clsPhieuNhap_BUS.cs" />
