--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="clsChiTietPhieuNhap_DTO.cs" />
     <Compile Include="clsChiTietPhieuXuat_DTO.cs" />
+    <Compile Include="clsHangSanXuat_DTO.cs" />
     <Compile Include="clsKhachHang_DTO.cs" />
     <Compile Include="clsLoai_DTO.cs" />
     <Compile Include="clsNhaCungCap_DTO.cs" />
