--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsBaoHanh_DTO.cs" />
+    <Compile Include="clsChiTietBaoHanh_DTO.cs" />
     <Compile Include="clsChiTietPhieuNhap_DTO.cs" />
     <Compile Include="clsChiTietPhieuXuat_DTO.cs" />
     <Compile Include="clsHangSanXuat_DTO.cs" />
