--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -78,6 +78,12 @@
     <Compile Include="frmThemSuaSanPham.Designer.cs">
       <DependentUpon>frmThemSuaSanPham.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTim.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTim.Designer.cs">
+      <DependentUpon>frmTim.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserControls\ucBanHang.cs">
@@ -244,6 +250,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmThemSuaSanPham.resx">
       <DependentUpon>frmThemSuaSanPham.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTim.resx">
+      <DependentUpon>frmTim.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
