--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -84,6 +84,7 @@
     <Compile Include="frmTim.Designer.cs">
       <DependentUpon>frmTim.cs</DependentUpon>
     </Compile>
+    <Compile Include="IDieuKhien.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserControls\ucBanHang.cs">
